sumo/tests/sumo/output/e3/errors/id_empty/errors.sumo
Error: Attribute 'id' in definition of a e3-detector is empty.
Quitting (on error).
